Fix spacing in search prompt

--- a/style.css
+++ b/style.css
@@ -278,7 +278,8 @@ button:hover {
   height: 2em;
   margin-top: .3em;
   border-radius: 1em;
-  padding-left: .2em;
+  padding-left: .7em;
+  padding-right: 0.5em;
   margin-left: 1em;
   margin-right: 1em;
 }
